[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kerbiancore"
version = "0.1.0"
description = "KerbianCore: Robust, secure, and scalable toolkit for mobile app development"
authors = [
    { name="KerbianCore Contributors", email="opensource@kerbiancore.dev" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/kerbiancore/kerbiancore"

[project.scripts]
kerbiancore = "kerbiancore.cli:main"